[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cycu11372010"
version = "2025.05.06"
description = "A short description of the cycu11372010 package"
readme = "readme.md"
requires-python = ">=3.7"
authors = [
    { name="Lin gene yuan", email="gene0931767136@gmail.com" }
]
license = { text = "MIT" }
dependencies = [
    "beautifulsoup4==4.13.4",
    "branca==0.8.1",
    "bs4==0.0.2",
    "build==1.2.2.post1",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "folium==0.19.5",
    "fonttools==4.57.0",
    "geopandas==1.0.1",
    "greenlet==3.2.1",
    "idna==3.10",
    "Jinja2==3.1.6",
    "kiwisolver==1.4.8",
    "MarkupSafe==3.0.2",
    "matplotlib==3.10.1",
    "numpy==2.2.5",
    "packaging==25.0",
    "pandas==2.2.3",
    "pillow==11.2.1",
    "playwright==1.52.0",
    "pyee==13.0.0",
    "pyogrio==0.10.0",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "requests==2.32.3",
    "shapely==2.1.0",
    "six==1.17.0",
    "soupsieve==2.7",
    "SQLAlchemy==2.0.40",
    "typing_extensions==4.13.2",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "xyzservices==2025.4.0"
]

[project.urls]
"Homepage" = "https://github.com/dashboard"
"Source" = "https://github.com/Allen-051/cycu_oop_11372009"